tests/invalid/static_assert_fail.c
_Static_assert(0, "failed");
int main() { return 0; }
